# iamai-chat

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists2.txt  LICENSE  README-ORG.md  README.md  cmakelist3.txt  database.db  iamai-chat copy.cpp  iamai-chat-2.cpp  iamai-chat.cpp  main.cpp  package-lock.json
gui/: README.md  SQL.js  database.db  package-lock.json  package.json
gui/src/: App.js  ChatApp.js  Model.js  Settings copy.js  Settings.js  SideBar.js  SideBar.test.js  Three.js  imports.js  index.js  styles.css  test.py
